--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
-
+Title: Reading Polish Latin Manuscripts
+#logo: 
+text: This website will teach you to read Polish Latin manuscripts.
+#show_downloads:
+theme: jekyll-theme-lanyon
