--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ Title: Reading Polish Latin Manuscripts
 #logo: 
 text: This website will teach you to read Polish Latin manuscripts.
 #show_downloads:
-theme: jekyll-theme-lanyon
+theme: jekyll-theme-minima
