--- a/_config.yml
+++ b/_config.yml
@@ -12,13 +12,11 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Wartime Diamondback, 1943-12-17 (an example)
-email: your-email@example.com
+title: Unlocking Polish Latin Manuscripts
+email: mjbailey@umd.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "/wartime-diamondback" # the subpath of your site, e.g. /blog
+  This site was designed to help the interested reader of Latin manuscripts from Poland in the sixteenth and early seventeenth centuries.
+baseurl: "/polishlatinmanuscripts" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Color scheme. Options: red, orange, magenta, cyan, blue, brown
